# t1dine

./: .dependency-cruiser.cjs  .dockerignore  .env.example  .gitignore  .mcp.json  .mcp.optional.json.example  BOOTSTRAP-CHECKLIST.md  CLAUDE.md  Dockerfile  MANIFEST.json  README.md  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.base.json  vitest.config.ts  vitest.demo.config.ts
.claude/: settings.json
.claude/agents/: backend-engineer.md  clinical-safety-reviewer.md  food-data-engineer.md  mobile-engineer.md  product-architect.md  quality-regulatory-reviewer.md  security-privacy-reviewer.md
.claude/hooks/: pre_tool_guard.py
.claude/rules/: architecture.md  clinical-safety.md  food-data.md  privacy-security.md  testing.md
examples/: meal-demo.ts
infra/: README.md
prompts/: 00-initial-plan-mode.md  01-first-execution-slice.md
scripts/: bootstrap.ps1  bootstrap.sh  check_dose_engine_isolation.mjs  validate_repo.py
services/food-ingestion/: .gitignore  README.md  pyproject.toml
services/food-ingestion/food_ingestion/: __init__.py
services/food-ingestion/food_ingestion/portfir/: __init__.py  canonical.py  diff.py  emit_catalog.py  import_data.py  nutrient_map.py  parser.py  profile.py  profiler.py  quality.py  reporting.py  validate.py
services/food-ingestion/tests/: conftest.py  test_canonical.py  test_cli.py  test_determinism.py  test_diff.py  test_nutrient_map.py  test_parser.py  test_profiler.py  test_quality.py  test_reporting.py
services/food-ingestion/tests/fixtures/: make_mini_insa.py  mini_insa.xlsx
(+239 files in other folders)
